--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/Dialogs/ReadErrorDialog.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/Dialogs/ReadErrorDialog.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Neurotoxin.Contour.Modules.FileManager.Views.Dialogs.ReadErrorDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Width="450" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner">
+        Width="450" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Icon="/Resources/icon.ico">
     
     <Grid x:Name="LayoutRoot" Margin="5">
         <Grid.ColumnDefinitions>
