--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/Dialogs/ReconnectionDialog.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/Dialogs/ReconnectionDialog.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:dialogs="clr-namespace:Neurotoxin.Contour.Modules.FileManager.Views.Dialogs" 
-        Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner">
+        Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Icon="/Resources/icon.ico">
     <Grid x:Name="LayoutRoot" Margin="5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
