--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/Dialogs/NewFolderDialog.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/Dialogs/NewFolderDialog.xaml
@@ -1,7 +1,6 @@
-﻿<Window x:Class="Neurotoxin.Contour.Modules.FileManager.Views.Dialogs.ReconnectionDialog"
+﻿<Window x:Class="Neurotoxin.Contour.Modules.FileManager.Views.Dialogs.NewFolderDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:dialogs="clr-namespace:Neurotoxin.Contour.Modules.FileManager.Views.Dialogs" 
         Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Icon="/Resources/icon.ico">
     <Grid x:Name="LayoutRoot" Margin="5">
         <Grid.ColumnDefinitions>
@@ -16,12 +15,12 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock x:Name="ErrorMessage" Grid.ColumnSpan="4" Grid.Row="0" Margin="5,5,5,10" TextWrapping="Wrap" />
+        <TextBlock Grid.ColumnSpan="4" Grid.Row="0" Margin="5,5,5,10" Text="New folder (directory)" />
 
-        <TextBlock Grid.ColumnSpan="4" Grid.Row="1" Margin="5,0,0,5" Text="Do you want to reconnect?" />
+        <TextBox Grid.ColumnSpan="4" Grid.Row="1" Margin="5,0,0,5" x:Name="Name" />
 
-        <Button Grid.Column="1" Grid.Row="2" Content="Yes" Margin="5" x:Name="Reconnect" Click="ButtonClick"/>
-        <Button Grid.Column="2" Grid.Row="2" Content="No" Margin="5" x:Name="Cancel" Click="ButtonClick"/>
+        <Button Grid.Column="1" Grid.Row="2" Content="Yes" Margin="5" Click="OkButtonClick"/>
+        <Button Grid.Column="2" Grid.Row="2" Content="No" Margin="5" Click="CancelButtonClick"/>
 
     </Grid>
 </Window>
