--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/FileListPane.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/FileListPane.xaml
@@ -8,9 +8,9 @@
                     xmlns:co="clr-namespace:Neurotoxin.Contour.Presentation.Converters;assembly=Neurotoxin.Contour.Presentation"
                     xmlns:constants="clr-namespace:Neurotoxin.Contour.Modules.FileManager.Constants"
                     xmlns:system="clr-namespace:System;assembly=mscorlib"
-                    xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
                     MinHeight="300">
     <UserControl.Resources>
+        <co:BoolToVisibilityConverter x:Key="BoolToVis"/>
         <co:NotNullOrEmptyConverter x:Key="NotNullOrEmptyConverter"/>
         <converters:SizeConverter x:Key="SizeConverter"/>
         <converters:SizeAlignmentConverter x:Key="SizeAlignmentConverter"/>
@@ -268,6 +268,12 @@
                 <KeyBinding Command="{Binding RenameCommand}" CommandParameter="{Binding ElementName=Grid}" Key="F6" Modifiers="Shift"/>
             </DataGrid.InputBindings>
         </DataGrid>
+        
+        <Border Grid.Row="2" Background="#f4f4f4" BorderBrush="LightGray" BorderThickness="0,1,1,0" 
+                CornerRadius="0,3,0,0" Height="Auto" Width="Auto" HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                Visibility="{Binding IsBusy, Converter={StaticResource BoolToVis}}" Margin="1,0,0,1">
+            <TextBlock Text="{Binding ProgressMessage}" Foreground="#a0a0a0" Margin="2,1,3,1"/>
+        </Border>
 
         <TextBlock Text="{Binding SizeInfo}" Padding="2" Grid.Row="3"/>
     </Grid>
