Title recognition bugfixes

--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/FileManagerView.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/FileManagerView.xaml
@@ -25,7 +25,7 @@
         </views:PaneTemplateSelector>
     </inf:ModuleViewBase.Resources>
     <Grid x:Name="LayoutRoot">
-        <Grid x:Name="Content">
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="3"/>
