--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/Dialogs/NewFolderDialog.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/Dialogs/NewFolderDialog.xaml
@@ -17,7 +17,7 @@
 
         <TextBlock Grid.ColumnSpan="4" Grid.Row="0" Margin="5,5,5,10" Text="New folder (directory)" />
 
-        <TextBox Grid.ColumnSpan="4" Grid.Row="1" Margin="5,0,0,5" x:Name="Name" />
+        <TextBox Grid.ColumnSpan="4" Grid.Row="1" Margin="5,0,0,5" x:Name="FolderName" />
 
         <Button Grid.Column="1" Grid.Row="2" Content="Yes" Margin="5" Click="OkButtonClick"/>
         <Button Grid.Column="2" Grid.Row="2" Content="No" Margin="5" Click="CancelButtonClick"/>
