Minor visual improvements

--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/ConnectionsPane.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/ConnectionsPane.xaml
@@ -34,7 +34,7 @@
                    FontWeight="Bold"
                    Grid.Row="1"/>
 
-        <ListBox Grid.Row="2" ItemsSource="{Binding Items}" SelectedItem="{Binding SelectedItem}"
+        <ListBox Grid.Row="2" ItemsSource="{Binding Items}" SelectedItem="{Binding SelectedItem}" x:Name="ConnectionList"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
