--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/FileManagerView.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/FileManagerView.xaml
@@ -4,6 +4,7 @@
                     xmlns:inf="clr-namespace:Neurotoxin.Contour.Presentation.Infrastructure;assembly=Neurotoxin.Contour.Presentation"
                     xmlns:views="clr-namespace:Neurotoxin.Contour.Modules.FileManager.Views"
                     xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+                    xmlns:Commands="clr-namespace:Neurotoxin.Contour.Modules.FileManager.Views.Commands"
                     MinHeight="300">
     <inf:ModuleViewBase.Resources>
         <views:PaneTemplateSelector x:Key="TemplateSelector">
@@ -36,9 +37,9 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <ContentControl Grid.Column="0" Grid.Row="0" Content="{Binding LeftPane}" ContentTemplateSelector="{StaticResource TemplateSelector}"/>
+            <ContentControl Grid.Column="0" Grid.Row="0" Content="{Binding LeftPane}" ContentTemplateSelector="{StaticResource TemplateSelector}" x:Name="LeftPane"/>
             <GridSplitter Grid.Column="1"/>
-            <ContentControl Grid.Column="2" Grid.Row="0" Content="{Binding RightPane}" ContentTemplateSelector="{StaticResource TemplateSelector}"/>
+            <ContentControl Grid.Column="2" Grid.Row="0" Content="{Binding RightPane}" ContentTemplateSelector="{StaticResource TemplateSelector}" x:Name="RightPane"/>
             
             <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1">
                 <Grid.ColumnDefinitions>
@@ -67,6 +68,8 @@
             <KeyBinding Command="{Binding MoveCommand}" Key="F6"/>
             <KeyBinding Command="{Binding NewFolderCommand}" Key="F7"/>
             <KeyBinding Command="{Binding DeleteCommand}" Key="F8"/>
+            <KeyBinding Command="{x:Static Commands:FileManagerCommands.OpenDriveDropdownCommand}" CommandParameter="{Binding ElementName=LeftPane}" Key="F1" Modifiers="Alt"/>
+            <KeyBinding Command="{x:Static Commands:FileManagerCommands.OpenDriveDropdownCommand}" CommandParameter="{Binding ElementName=RightPane}" Key="F2" Modifiers="Alt"/>
         </Grid.InputBindings>
     </Grid>
 </inf:ModuleViewBase>
