--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ConfirmationDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ConfirmationDialog.xaml
@@ -1,8 +1,10 @@
-﻿<Window x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.ConfirmationDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Icon="/Resources/icon.ico">
-    <Grid x:Name="LayoutRoot" Margin="5">
+﻿<controls:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.ConfirmationDialog"
+                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                           xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
+                           Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner"
+                           Style="{StaticResource Dialog}">
+    <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -16,8 +18,8 @@
 
         <TextBlock Grid.ColumnSpan="4" Grid.Row="0" Margin="5,0,0,5" x:Name="Message" TextWrapping="Wrap" />
 
-        <Button Grid.Column="1" Grid.Row="1" Content="Yes" Margin="5" Click="OkButtonClick"/>
-        <Button Grid.Column="2" Grid.Row="1" Content="No" Margin="5" Click="CancelButtonClick"/>
+        <Button Grid.Column="1" Grid.Row="1" Content="Yes" Margin="5" x:Name="Ok" Click="OkButtonClick"/>
+        <Button Grid.Column="2" Grid.Row="1" Content="No" Margin="5" x:Name="Cancel" Click="CancelButtonClick"/>
 
     </Grid>
-</Window>
+</controls:BorderlessWindow>
