--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewConnectionDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewConnectionDialog.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.NewConnectionDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:validation="clr-namespace:Neurotoxin.Godspeed.Presentation.Validation;assembly=Neurotoxin.Godspeed.Presentation"
-        xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
-        Width="320" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Title="Connection details" Icon="/Resources/icon.ico"
-        x:Name="this">
-    <Window.Resources>
+﻿<controls:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.NewConnectionDialog"
+                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                           xmlns:validation="clr-namespace:Neurotoxin.Godspeed.Presentation.Validation;assembly=Neurotoxin.Godspeed.Presentation"
+                           xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
+                           xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
+                           Width="320" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Title="Connection details"
+                           Style="{StaticResource Dialog}" x:Name="this">
+    <controls:BorderlessWindow.Resources>
         <converters:EnumConverter x:Key="EnumConverter"/>
         <Style TargetType="TextBox" x:Key="TextBoxStyle">
             <Style.Triggers>
@@ -13,34 +14,36 @@
                     <Setter Property="Background" Value="Pink"/>
                 </Trigger>
             </Style.Triggers>
-            <Setter Property="Validation.ErrorTemplate"> <!-- {StaticResource ErrorTemplateSilverlightStyle} -->
+            <Setter Property="Validation.ErrorTemplate">
+                <!-- {StaticResource ErrorTemplateSilverlightStyle} -->
                 <Setter.Value>
                     <ControlTemplate>
                         <Grid>
-                            <Border BorderThickness="1" BorderBrush="#FFdc000c" CornerRadius="0.7" VerticalAlignment="Top" x:Name="border">
+                            <Border BorderThickness="1" BorderBrush="#FFdc000c" CornerRadius="2" VerticalAlignment="Top" x:Name="border"
+                                    SnapsToDevicePixels="True">
                                 <Grid>
                                     <Polygon x:Name="toolTipCorner"
-                                             Grid.ZIndex="2"
-                                             Margin="-1"
-                                             Points="6,6 6,0 0,0" 
-                                             Fill="#FFdc000c" 
-                                             HorizontalAlignment="Right" 
-                                             VerticalAlignment="Top"
-                                             IsHitTestVisible="True"/>
+                                    Grid.ZIndex="2"
+                                    Margin="-1"
+                                    Points="6,6 6,0 0,0" 
+                                    Fill="#FFdc000c" 
+                                    HorizontalAlignment="Right" 
+                                    VerticalAlignment="Top"
+                                    IsHitTestVisible="True"/>
                                     <Polyline Grid.ZIndex="3"
-                                              Points="7,7 0,0" Margin="-1" HorizontalAlignment="Right" 
-                                              StrokeThickness="1.5"
-                                              StrokeEndLineCap="Round"
-                                              StrokeStartLineCap="Round"
-                                              Stroke="White"
-                                              VerticalAlignment="Top"
-                                              IsHitTestVisible="True"/>
-                                    <AdornedElementPlaceholder x:Name="adorner"/>
+                                    Points="7,7 0,0" Margin="-1" HorizontalAlignment="Right" 
+                                    StrokeThickness="1.5"
+                                    StrokeEndLineCap="Round"
+                                    StrokeStartLineCap="Round"
+                                    Stroke="White"
+                                    VerticalAlignment="Top"
+                                    IsHitTestVisible="True"/>
+                                    <AdornedElementPlaceholder x:Name="adorner" Margin="-1"/>
                                 </Grid>
                             </Border>
                             <Popup x:Name="errorBorder" AllowsTransparency="True"
-                                    IsHitTestVisible="False" IsOpen="False" PlacementTarget="{Binding ElementName=border}" Placement="Right"
-                                    MinHeight="24" MaxWidth="400">
+                        IsHitTestVisible="False" IsOpen="False" PlacementTarget="{Binding ElementName=border}" Placement="Right"
+                        MinHeight="24" MaxWidth="400">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="1"/>
@@ -51,7 +54,7 @@
                                             <DropShadowEffect ShadowDepth="2.25" Color="Black" Opacity="0.4" Direction="315" BlurRadius="4"/>
                                         </Border.Effect>
                                         <TextBlock Text="{Binding ElementName=adorner, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
-                                           Foreground="White" Margin="8,3,8,3" TextTrimming="CharacterEllipsis"/>
+                                Foreground="White" Margin="8,3,8,3" TextTrimming="CharacterEllipsis"/>
                                     </Border>
                                 </Grid>
                             </Popup>
@@ -65,8 +68,8 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </Window.Resources>
-    <Grid x:Name="LayoutRoot" Margin="5">
+    </controls:BorderlessWindow.Resources>
+    <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
             <ColumnDefinition Width="*"/>
@@ -151,4 +154,4 @@
             <Button Content="Cancel" Width="75" Click="CancelButtonClick"/>
         </StackPanel>
     </Grid>
-</Window>
+</controls:BorderlessWindow>
