--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ReconnectionDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ReconnectionDialog.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.ReconnectionDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs" 
-        Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Icon="/Resources/icon.ico">
-    <Grid x:Name="LayoutRoot" Margin="5">
+﻿<controls:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.ReconnectionDialog"
+                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                           xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
+                           Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner"
+                           Style="{StaticResource Dialog}">
+    <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -24,4 +25,4 @@
         <Button Grid.Column="2" Grid.Row="2" Content="No" Margin="5" x:Name="Cancel" Click="ButtonClick"/>
 
     </Grid>
-</Window>
+</controls:BorderlessWindow>
