--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
@@ -1,13 +1,15 @@
-﻿<Window x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.TransferProgressDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
-        xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs" 
-        Title="{Binding TransferProgressDialogMode}"
-        Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Icon="/Resources/icon.ico">
-    <Window.Resources>
+﻿<controls:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.TransferProgressDialog"
+                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                           xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
+                           xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs"
+                           xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
+                           Title="{Binding TransferProgressDialogMode}"
+                           Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner"
+                           Style="{StaticResource Dialog}">
+    <controls:BorderlessWindow.Resources>
         <converters:TransferProgressDialogModeConverter x:Key="TransferProgressDialogModeConverter"/>
-    </Window.Resources>
+    </controls:BorderlessWindow.Resources>
     <Grid x:Name="LayoutRoot" Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -45,4 +47,4 @@
         </StackPanel>
         <Button Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Right" Width="75" Content="Cancel" Click="CancelButtonClick"/>
     </Grid>
-</Window>
+</controls:BorderlessWindow>
