--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/WriteErrorDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/WriteErrorDialog.xaml
@@ -1,9 +1,11 @@
-﻿<Window x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.WriteErrorDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views" Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner">
-    
-    <Grid x:Name="LayoutRoot" Margin="5">
+﻿<controls:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.WriteErrorDialog"
+                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                           xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
+                           xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
+                           Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner"
+                           Style="{StaticResource Dialog}">
+    <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -21,7 +23,7 @@
             <views:FileDetailsBox x:Name="TargetFile"/>
         </GroupBox>
 
-        <GroupBox Header="With this:" Grid.ColumnSpan="3" Grid.Row="1" Margin="5,0,0,5">
+        <GroupBox Header="With this:" Grid.ColumnSpan="3" Grid.Row="1" Margin="5,0,5,5">
             <views:FileDetailsBox x:Name="SourceFile"/>
         </GroupBox>
 
@@ -38,4 +40,4 @@
         <Button Grid.Column="2" Grid.Row="4" Content="Cancel" Margin="5" x:Name="Cancel" Click="ButtonClick"/>
 
     </Grid>
-</Window>
+</controls:BorderlessWindow>
