--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileListPane.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileListPane.xaml
@@ -8,25 +8,32 @@
                     xmlns:co="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
                     xmlns:constants="clr-namespace:Neurotoxin.Godspeed.Shell.Constants"
                     xmlns:system="clr-namespace:System;assembly=mscorlib"
-                    MinHeight="300" Background="Transparent">
+                    Background="Transparent">
     <UserControl.Resources>
-        <co:BoolToVisibilityConverter x:Key="BoolToVis"/>
-        <co:NotNullOrEmptyConverter x:Key="NotNullOrEmptyConverter"/>
-        <converters:SizeConverter x:Key="SizeConverter"/>
-        <converters:SizeAlignmentConverter x:Key="SizeAlignmentConverter"/>
-        <converters:TitleConverter x:Key="TitleConverter"/>
-        <converters:NameConverter x:Key="NameConverter"/>
-        <converters:PaneHeaderBackgroundConverter x:Key="PaneHeaderBackgroundConverter"
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Themes/WhistlerBlue.xaml"/>                
+                <ResourceDictionary>
+                    <co:BoolToVisibilityConverter x:Key="BoolToVis"/>
+                    <co:NotNullOrEmptyConverter x:Key="NotNullOrEmptyConverter"/>
+                    <converters:SizeConverter x:Key="SizeConverter"/>
+                    <converters:SizeAlignmentConverter x:Key="SizeAlignmentConverter"/>
+                    <converters:TitleConverter x:Key="TitleConverter"/>
+                    <converters:NameConverter x:Key="NameConverter"/>
+                    <converters:PaneHeaderBackgroundConverter x:Key="PaneHeaderBackgroundConverter"
                                                   ActivePaneBrush="{StaticResource DefaultedBorderBrush}"
                                                   InactivePaneBrush="{StaticResource NormalBorderBrush}"/>
 
-        <inf:BindingProxy x:Key="ViewModel" Data="{Binding}"/>
-        <constants:ToggleSelectionMode x:Key="Insert">Insert</constants:ToggleSelectionMode>
-        <constants:ToggleSelectionMode x:Key="Space">Space</constants:ToggleSelectionMode>
-        <constants:ToggleSelectionMode x:Key="ShiftDown">ShiftDown</constants:ToggleSelectionMode>
-        <constants:ToggleSelectionMode x:Key="ShiftUp">ShiftUp</constants:ToggleSelectionMode>
-        <system:Boolean x:Key="False">False</system:Boolean>
-        <system:Boolean x:Key="True">True</system:Boolean>
+                    <inf:BindingProxy x:Key="ViewModel" Data="{Binding}"/>
+                    <constants:ToggleSelectionMode x:Key="Insert">Insert</constants:ToggleSelectionMode>
+                    <constants:ToggleSelectionMode x:Key="Space">Space</constants:ToggleSelectionMode>
+                    <constants:ToggleSelectionMode x:Key="ShiftDown">ShiftDown</constants:ToggleSelectionMode>
+                    <constants:ToggleSelectionMode x:Key="ShiftUp">ShiftUp</constants:ToggleSelectionMode>
+                    <system:Boolean x:Key="False">False</system:Boolean>
+                    <system:Boolean x:Key="True">True</system:Boolean>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </UserControl.Resources>
 
     <e:Interaction.Triggers>
@@ -39,9 +46,6 @@
     </e:Interaction.Triggers>
 
     <Grid x:Name="LayoutRoot">
-        <Grid.Resources>
-            <ResourceDictionary Source="/Themes/WhistlerBlue.xaml"/>
-        </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -49,7 +53,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         
-        <Grid Grid.Row="0" Margin="2,2,0,5">
+        <Grid Grid.Row="0" Margin="0,2,0,5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
@@ -140,7 +144,10 @@
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
                                 <Image Grid.Column="0" Source="{Binding Thumbnail}" Width="16" Height="16" Margin="2,0,3,0"/>
-                                <TextBox x:Name="TitleEditBox" Grid.Column="1" Text="{Binding Title, UpdateSourceTrigger=LostFocus}" FontWeight="Bold"/>
+                                <Grid Grid.Column="1" x:Name="TitleEditCanvas">
+                                    <TextBox x:Name="TitleEditBox" Margin="0,-2" Height="20"
+                                             Text="{Binding Title, UpdateSourceTrigger=LostFocus}" FontWeight="Bold" Loaded="TitleEditBox_Loaded"/>
+                                </Grid>
                             </Grid>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellEditingTemplate>
@@ -202,9 +209,14 @@
                                     <Rectangle StrokeThickness="1" Stroke="Black" StrokeDashArray="1 2" SnapsToDevicePixels="true" Opacity="0" x:Name="Focus"/>
                                 </Grid>
                                 <ControlTemplate.Triggers>
-                                    <Trigger Property="IsSelected" Value="True">
+                                    <MultiDataTrigger>
+                                        <MultiDataTrigger.Conditions>
+                                            <Condition Binding="{Binding RelativeSource={RelativeSource Mode=Self}, Path=IsSelected}" Value="True"/>
+                                            <Condition Binding="{Binding ElementName=Grid, Path=DataContext.IsActive}" Value="True"/>
+                                            <Condition Binding="{Binding ElementName=Grid, Path=DataContext.IsInEditMode}" Value="False"/>
+                                        </MultiDataTrigger.Conditions>
                                         <Setter TargetName="Focus" Property="Opacity" Value="1"/>
-                                    </Trigger>
+                                    </MultiDataTrigger>
                                 </ControlTemplate.Triggers>
                             </ControlTemplate>
                         </Setter.Value>
