--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/InputDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/InputDialog.xaml
@@ -1,4 +1,4 @@
-﻿<controls:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.InputDialog"
+﻿<controls:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.InputDialog"
                            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                            xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
@@ -24,4 +24,4 @@
         <Button Grid.Column="2" Grid.Row="2" Content="No" Margin="5" Click="CancelButtonClick"/>
 
     </Grid>
-</controls:BorderlessWindow>
+</controls:DialogBase>
