--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewConnectionDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewConnectionDialog.xaml
@@ -1,12 +1,13 @@
-﻿<controls:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.NewConnectionDialog"
-                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                           xmlns:validation="clr-namespace:Neurotoxin.Godspeed.Presentation.Validation;assembly=Neurotoxin.Godspeed.Presentation"
-                           xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
-                           xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
-                           Width="320" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Title="Connection details"
-                           Style="{StaticResource Dialog}" x:Name="this">
-    <controls:BorderlessWindow.Resources>
+﻿<controls:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.NewConnectionDialog"
+                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                     xmlns:validation="clr-namespace:Neurotoxin.Godspeed.Presentation.Validation;assembly=Neurotoxin.Godspeed.Presentation"
+                     xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
+                     xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
+                     xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs" 
+                     Width="320" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Title="Connection details"
+                     Style="{StaticResource Dialog}">
+    <controls:DialogBase.Resources>
         <converters:EnumConverter x:Key="EnumConverter"/>
         <Style TargetType="TextBox" x:Key="TextBoxStyle">
             <Style.Triggers>
@@ -15,7 +16,6 @@
                 </Trigger>
             </Style.Triggers>
             <Setter Property="Validation.ErrorTemplate">
-                <!-- {StaticResource ErrorTemplateSilverlightStyle} -->
                 <Setter.Value>
                     <ControlTemplate>
                         <Grid>
@@ -68,7 +68,8 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </controls:BorderlessWindow.Resources>
+    </controls:DialogBase.Resources>
+    
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
@@ -96,8 +97,9 @@
         </TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="1" Text="Xbox version:" VerticalAlignment="Center" Margin="0,0,0,5"/>
-        <ComboBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Margin="0,0,0,5" x:Name="Version" 
-                  ItemsSource="{Binding ElementName=this, Path=ConnectionImages}" SelectedItem="{Binding ConnectionImage}">
+        <ComboBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Margin="0,0,0,5" 
+                  ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type dialogs:NewConnectionDialog}}, Path=ConnectionImages}" 
+                  SelectedItem="{Binding ConnectionImage}">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Converter={StaticResource EnumConverter}}"/>
@@ -154,4 +156,4 @@
             <Button Content="Cancel" Width="75" Click="CancelButtonClick"/>
         </StackPanel>
     </Grid>
-</controls:BorderlessWindow>
+</controls:DialogBase>
