--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewFolderDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewFolderDialog.xaml
@@ -1,4 +1,4 @@
-﻿<controls:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.NewFolderDialog"
+﻿<controls:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.NewFolderDialog"
                            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                            xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
@@ -21,8 +21,8 @@
 
         <TextBox Grid.ColumnSpan="4" Grid.Row="1" Margin="5,0,0,5" x:Name="FolderName" />
 
-        <Button Grid.Column="1" Grid.Row="2" Content="Yes" Margin="5" Click="OkButtonClick"/>
-        <Button Grid.Column="2" Grid.Row="2" Content="No" Margin="5" Click="CancelButtonClick"/>
+        <Button Grid.Column="1" Grid.Row="2" Content="Yes" Margin="5" x:Name="Ok" Click="OkButtonClick"/>
+        <Button Grid.Column="2" Grid.Row="2" Content="No" Margin="5" x:Name="Cancel" Click="CancelButtonClick"/>
 
     </Grid>
-</controls:BorderlessWindow>
+</controls:DialogBase>
