--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/WriteErrorDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/WriteErrorDialog.xaml
@@ -1,4 +1,4 @@
-﻿<controls:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.WriteErrorDialog"
+﻿<controls:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.WriteErrorDialog"
                            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                            xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
@@ -40,4 +40,4 @@
         <Button Grid.Column="2" Grid.Row="4" Content="Cancel" Margin="5" x:Name="Cancel" Click="ButtonClick"/>
 
     </Grid>
-</controls:BorderlessWindow>
+</controls:DialogBase>
